Use Integer.valueOf instead of new Integer (recommended, support some caching)